--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
+    "@devexpress/dx-react-scheduler-material-ui": "2.7.5",
+    "@devexpress/dx-react-scheduler": "2.7.5",
+    "@devexpress/dx-react-core": "2.7.5",
     "axios": "^0.21.1",
     "date-fns": "^1.27.2",
     "moment": "^2.29.1",
