--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "eslint": "^7.22.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./ --ext .jsx,.js",
+    "lint-fix": "eslint ./ --ext .jsx,.js --fix"
   },
   "eslintConfig": {
     "extends": [
