--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-core": "2.7.5",
+    "@devexpress/dx-react-scheduler": "2.7.5",
+    "@devexpress/dx-react-scheduler-material-ui": "2.7.5",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/core": "^4.11.3",
-    "@devexpress/dx-react-scheduler-material-ui": "2.7.5",
-    "@devexpress/dx-react-scheduler": "2.7.5",
-    "@devexpress/dx-react-core": "2.7.5",
     "axios": "^0.21.1",
     "date-fns": "^1.27.2",
     "moment": "^2.29.1",
@@ -21,7 +21,8 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "^7.22.0"
+    "eslint": "^7.22.0",
+    "react-test-renderer": "^17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
